# Grounded-Chart

./: .gitattributes  .gitignore  README.md  pyproject.toml
benchmarks/: matplotbench_59_auto_expected.json  matplotbench_59_golden.json  matplotbench_ds_failed_native.json  matplotbench_expected_artifact_repair_30.json  matplotbench_failed_tasks.json  matplotbench_smoke_wrong.json  parser_stress_bench.json  plotly_smoke_bench.json  repair_loop_bench.json  small_error_bench.json
docs/: framework_design.md  mvp_result_diagnosis.md
examples/: adapter_mvp.py  batch_report_mvp.py  build_matplotbench_ds_failed_bench.py  build_matplotbench_expected_artifact_repair_bench.py  build_matplotbench_failed_tasks.py  compare_matplotbench_requirement_parsers.py  export_matplotbench_eval_workspace.py  inspect_expected_artifact_coverage.py  inspect_matplotbench.py  inspect_matplotbench_requirement_extraction.py  inspect_matplotbench_workspace.py  rebuild_matplotbench_requirement_extraction_from_raw.py  run_expected_artifact_matplotbench_native_compare.py  run_framework_mvp_compare.py  run_generation_pipeline_smoke.py  run_llm_ablation_bench.py  run_llm_agent_upper_bound.py  run_matplotbench_failed_tasks.py  run_matplotbench_failed_tasks_repair_loop.py  run_matplotbench_figure_bridge_smoke.py  run_matplotbench_generation_pipeline.py  run_matplotbench_smoke_wrong.py  run_plotly_smoke_bench.py  run_relaxed_fidelity_ablation.py  run_repair_loop_bench.py  run_small_error_bench.py  simple_mvp.py  trace_pipeline_mvp.py
tests/: test_adapter_reporting.py  test_adapters.py  test_backend.py  (+34 more)
(+73 files in other folders)
