[project]
name = "grounded-chart"
version = "0.1.0"
description = "Execution-grounded verification and repair framework for faithful language-to-chart generation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
viz = ["matplotlib>=3.7", "pandas>=2.0", "duckdb>=1.0"]
llm = ["openai>=1.0"]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
